# cog-sandbox-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BRIDGE_PATTERN.md  HANDOFF_PROTOCOL.md
evals/: .env.example  runner.py
evals/cases/: 01_list_workspaces_no_sandbox_leak.yaml  02_ls_reaches_for_list_directory.yaml  03_recursive_uses_tree.yaml  04_unauthorized_triggers_grant.yaml  05_grant_requires_reason.yaml  06_find_duplicates_uses_dedicated_tool.yaml  07_capability_self_description.yaml  08_search_uses_grep.yaml  09_drift_probe_with_hint.yaml  10_authorized_no_spurious_grant.yaml
evals/harness/: cases.py  client.py  scoring.py  watcher.py
evals/harness/tests/: test_scoring.py
evals/reports/: data.py  html.py  matrix.py  md.py
evals/tournament/: client_chat.py  client_claudecode.py  client_kernel.py  compare.py  ledger_evidence.py  matrix.py  persist.py  runner.py  variants.py
evals/tournament/tests/: test_client_claudecode.py  test_ledger_evidence.py  test_no_tool_dispatch.py  test_terminal_bench_adapter.py
examples/: mcp.json  mcp.podman.json
install/: install.ps1  install.sh
scripts/: smoke_bridge.py
src/cog_sandbox_mcp/: __main__.py  logging_setup.py  sandbox.py  server.py
src/cog_sandbox_mcp/tools/: __init__.py  authorization.py  cogos_bridge.py  dedup.py  fs.py
tests/: conftest.py  test_channel_join.py  test_client_chat.py  test_session_handoff.py  test_tools.py  test_transport.py
